add exam controller, service